--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
-!**/src/main/**/certs/*.pem
+/src/main/resources/certs/*.pem
 
 ### VS Code ###
 .vscode/
